--- a/index.html
+++ b/index.html
@@ -1814,7 +1814,7 @@
                             </div>
                             <div>
                                 <h4>Email</h4>
-                                <p><a href="/cdn-cgi/l/email-protection#98f1f6fef7d8f9eaf3ebfeb6fbe2"><span class="__cf_email__" data-cfemail="98f1f6fef7d8f9eaf3ebfeb6fbe2">[email&#160;protected]</span></a></p>
+                                <p><a href="mailto:info@arksf.cz">info@arksf.cz</a></p>
                             </div>
                         </li>
                         <li>
@@ -1907,7 +1907,7 @@
                 <p>© 2026 ARK – Síla & Fyzio</p>
                 <p>Nademlejnská 651/7, 198 00 Praha 9</p>
                 <p>jednatel Ing. Bc. Tomáš Neubert</p>
-                <p>vibecoded by: <a href="https://www.linkedin.com/in/anna-kutikova/" target="_blank" rel="noopener" style="color: inherit; text-decoration: underline; text-underline-offset: 2px;">Anna Kutíková ✳</a></p>
+                <p><a href="https://www.linkedin.com/in/anna-kutikova/" target="_blank" rel="noopener" style="color: inherit; text-decoration: underline; text-underline-offset: 2px;">vibecoded by: Anna Kutíková ✳</a></p>
             </div>
         </div>
     </footer>
