--- a/vop.html
+++ b/vop.html
@@ -84,7 +84,7 @@
                 <div class="vop-section">
                     <h2>1. Úvodní ustanovení</h2>
                     <p>Tyto obchodní podmínky upravují práva a povinnosti mezi poskytovatelem služeb ARK – Síla & Fyzio (dále jen „poskytovatel") a klientem.</p>
-                    <p>Služby poskytovatele zahrnují fyzioterapeutické konzultace, individuální tréninky a skupinové tréninky.</p>
+                    <p>Služby poskytovatele zahrnují individuální tréninky a skupinové tréninky.</p>
                 </div>
                 <div class="vop-section">
                     <h2>2. Úhrada služeb</h2>
@@ -166,7 +166,7 @@
             <div class="footer-bottom">
                 <p>© 2026 ARK – Síla & Fyzio</p>
                 <p>Nademlejnská 651/7, 198 00 Praha 9</p>
-                <p>vibecoded by: <a href="https://www.linkedin.com/in/anna-kutikova/" target="_blank" rel="noopener" style="color: inherit; text-decoration: underline; text-underline-offset: 2px;">Anna Kutíková ✳</a></p>
+                <p><a href="https://www.linkedin.com/in/anna-kutikova/" target="_blank" rel="noopener" style="color: inherit; text-decoration: underline; text-underline-offset: 2px;">vibecoded by: Anna Kutíková ✳</a></p>
             </div>
         </div>
     </footer>
