--- a/rezervace.html
+++ b/rezervace.html
@@ -50,6 +50,9 @@
         .new-client p{color:rgba(255,255,255,0.6);font-size:15px;margin:0}
         .new-client .btn{position:relative;z-index:1;flex-shrink:0;background:var(--accent);color:var(--white)}
         .new-client .btn:hover{background:#ff5252;box-shadow:0 4px 16px rgba(255,107,107,0.4)}
+        .new-client .btn-secondary{background:transparent;border:2px solid var(--white);color:var(--white)}
+        .new-client .btn-secondary:hover{background:rgba(255,255,255,0.1);box-shadow:none}
+        .new-client-actions{display:flex;gap:16px;flex-shrink:0;position:relative;z-index:1}
         .modal-overlay{position:fixed;inset:0;background:rgba(0,0,0,0.6);display:none;justify-content:center;align-items:center;z-index:1000;padding:24px}
         .modal-overlay.active{display:flex}
         .modal-content{width:100%;max-width:1200px;height:85vh;background:var(--white);border-radius:16px;overflow:hidden;position:relative}
@@ -74,7 +77,7 @@
         .footer-bottom{padding-top:24px;border-top:1px solid rgba(255,255,255,0.1);display:flex;flex-wrap:wrap;justify-content:center;gap:8px 24px}
         .footer-bottom p{color:rgba(255,255,255,0.4);font-size:13px}
         @media(max-width:900px){.footer-grid{grid-template-columns:1fr;gap:40px}}
-        @media(max-width:768px){.card{flex-direction:column;text-align:center}.card-action{width:100%}.btn{width:100%}.modal-content{height:90vh;border-radius:12px}.new-client{flex-direction:column;text-align:center;padding:40px 24px}.footer-nav-columns{grid-template-columns:1fr 1fr}}
+        @media(max-width:768px){.card{flex-direction:column;text-align:center}.card-action{width:100%}.btn{width:100%}.modal-content{height:90vh;border-radius:12px}.new-client{flex-direction:column;text-align:center;padding:40px 24px}.new-client-actions{flex-direction:column;width:100%}.footer-nav-columns{grid-template-columns:1fr 1fr}}
     </style>
 </head>
 <body>
@@ -107,22 +110,10 @@
                     </div>
                     <div class="card-content">
                         <h3>Nová rezervace</h3>
-                        <p>Objednejte se na konzultaci nebo individuální trénink.</p>
+                        <p>Pro nové i stávající klienty. Objednejte se na konzultaci, individuální trénink nebo skupinové lekce.</p>
                     </div>
                     <div class="card-action">
                         <button class="btn btn-secondary" onclick="openModal()">Rezervovat <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg></button>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-icon">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
-                    </div>
-                    <div class="card-content">
-                        <h3>Skupinové tréninky</h3>
-                        <p>Přihlaste se na skupinový trénink v malé skupině (max. 5 osob).</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://arksf.fyzion.cz/reservations/group-visits" target="_blank" rel="noopener" class="btn btn-secondary">Vybrat termín <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg></a>
                     </div>
                 </div>
                 <div class="card">
@@ -142,9 +133,9 @@
                 <div class="new-client-content">
                     <span class="new-client-label">// Nový klient?</span>
                     <h3>Ještě nejste náš klient?</h3>
-                    <p>Každá spolupráce začíná úvodní konzultací. Napište nám a domluvíme se.</p>
+                    <p>Každá spolupráce začíná úvodní konzultací. Rezervujte si termín nebo nám napište na <a href="mailto:info@arksf.cz" style="color: var(--accent); text-decoration: underline;">info@arksf.cz</a></p>
                 </div>
-                <a href="index.html#kontakt" class="btn">Začít spolupráci <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
+                <button class="btn" onclick="openModal()">Rezervovat termín <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg></button>
             </div>
         </div>
     </main>
@@ -194,7 +185,7 @@
                 <p>© 2026 ARK – Síla & Fyzio</p>
                 <p>Nademlejnská 651/7, 198 00 Praha 9</p>
                 <p>jednatel Ing. Bc. Tomáš Neubert</p>
-                <p>vibecoded by: <a href="https://www.linkedin.com/in/anna-kutikova/" target="_blank" rel="noopener" style="color: inherit; text-decoration: underline; text-underline-offset: 2px;">Anna Kutíková ✳</a></p>
+                <p><a href="https://www.linkedin.com/in/anna-kutikova/" target="_blank" rel="noopener" style="color: inherit; text-decoration: underline; text-underline-offset: 2px;">vibecoded by: Anna Kutíková ✳</a></p>
             </div>
         </div>
     </footer>
@@ -204,11 +195,7 @@
             <iframe src="https://arksf.fyzion.cz/reservations"></iframe>
         </div>
     </div>
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         function openModal(){document.getElementById('reservationModal').classList.add('active');document.body.style.overflow='hidden'}
         function closeModal(){document.getElementById('reservationModal').classList.remove('active');document.body.style.overflow=''}
-        document.getElementById('reservationModal').addEventListener('click',function(e){if(e.target===this)closeModal()});
-        document.addEventListener('keydown',function(e){if(e.key==='Escape')closeModal()});
-    </script>
-</body>
-</html>
+        document.getElementById('reservationModal').addEventListener('click',function(e){if(e.target==
