--- a/vop.html
+++ b/vop.html
@@ -84,7 +84,7 @@
                 <div class="vop-section">
                     <h2>1. Úvodní ustanovení</h2>
                     <p>Tyto obchodní podmínky upravují práva a povinnosti mezi poskytovatelem služeb ARK – Síla & Fyzio (dále jen „poskytovatel") a klientem.</p>
-                    <p>Služby poskytovatele zahrnují individuální tréninky a skupinové tréninky.</p>
+                    <p>Služby poskytovatele zahrnují úvodní a navazující konzultace, pravidelné tréninky a skupinové tréninky.</p>
                 </div>
                 <div class="vop-section">
                     <h2>2. Úhrada služeb</h2>
