--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARK | Síla & Fyzio – Bez strachu z pohybu</title>
+    <title>ARK | Síla & Fyzio</title>
     <meta name="description" content="Fyzioterapeuti, kteří vám vrátí vaši sílu zpět. Evidence-based fyzioterapie a osobní tréninky v Praze.">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
