--- a/rezervace.html
+++ b/rezervace.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rezervace | ARK – Síla & Fyzio</title>
+    <title>ARK | Síla & Fyzio</title>
     <meta name="description" content="Rezervujte si termín konzultace nebo tréninku v ARK – Síla & Fyzio">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
