--- a/vop.html
+++ b/vop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Obchodní podmínky | ARK – Síla & Fyzio</title>
+    <title>ARK | Síla & Fyzio</title>
     <meta name="description" content="Obchodní podmínky ARK – Síla & Fyzio">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
